--- a/public/button.html
+++ b/public/button.html
@@ -137,7 +137,6 @@
       </div>
     </div>
     
-    <script type="module" src="../src/button.js"></script>
-    <script type="text/babel" src="../src/sms.js"></script>
+    <script src="../build/button.js"></script>
   </body>
 </html>
