--- a/public/chart.html
+++ b/public/chart.html
@@ -63,9 +63,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="./chart.html"
-                  ><h3>Chart</h3></a
-                >
+                <a class="nav-link text-white" href="./chart.html"><h3>Chart</h3></a>
               </li>
               <li class="nav-item">
                 <!-- Modal trigger button -->
